--- a/pbta/src/pages/Dashboard/components/TransactionSummary/TransactionSummary.css
+++ b/pbta/src/pages/Dashboard/components/TransactionSummary/TransactionSummary.css
@@ -54,12 +54,12 @@
 
 .action-button {
     padding: 0.6rem 1rem;
-    background-color: transparent;
+    background-color: white;
     border: 2px solid white;
-    color: white;
     cursor: pointer;
     border-radius: 8px;
     font-size: 1rem;
+    font-weight: bold;
     white-space: nowrap;
 }
 
