--- a/pbta/src/pages/Login/Login.css
+++ b/pbta/src/pages/Login/Login.css
@@ -31,7 +31,7 @@
 .login-container button {
     width: 100%;
     padding: 0.75rem;
-    background-color: #007bff;
+    background-color: #000000;
     border: none;
     color: white;
     font-weight: bold;
@@ -41,5 +41,5 @@
 }
 
 .login-container button:hover {
-    background-color: #0056b3;
+    background-color: #343434;
 }
