--- a/pbta/src/pages/Signup/Signup.css
+++ b/pbta/src/pages/Signup/Signup.css
@@ -35,7 +35,7 @@
 .signup-container button {
     width: 100%;
     padding: 0.75rem;
-    background-color: #007bff;
+    background-color: #000000;
     border: none;
     color: white;
     font-weight: bold;
@@ -45,5 +45,5 @@
 }
 
 .signup-container button:hover {
-    background-color: #0056b3;
+    background-color: #343434;
 }
